# vne-sim

./: .clang-format  .cproject  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .project  BUILD_NOTES_2024-11-19.txt  CMakeLists.txt  README  README.md  config.toml  configurations.xml  configurations_sample.xml  configure.ac
external-libs/BRITE/C++/: BriteMain.cc  CMakeLists.txt  Edge.h  Graph.h  Node.h  Topology.cc  Topology.h  Util.h
external-libs/BRITE/C++/Models/: RouterModel.cc  RouterWaxmanModel.h
src/: CMakeLists.txt  substrate-network.h
src/VineYard/: vy-coordinate.cc  vy-coordinate.h  vy-statistics.cc  vy-statistics.h  vy-substrate-link.cc  vy-substrate-link.h  vy-substrate-network-builder.cc  vy-substrate-network-builder.h  vy-substrate-node.cc  vy-substrate-node.h  vy-vine-embedding-algo-file-based.cc  vy-vine-embedding-algo-file-based.h  vy-vine-embedding-algo.cc  vy-vine-embedding-algo.h  vy-vine-link-embedding-algo.cc  vy-vine-link-embedding-algo.h  vy-vine-node-embedding-algo.cc  vy-vine-two-stage-embedding-algo.cc  vy-vine-two-stage-embedding-algo.h  vy-virtual-link.cc  vy-virtual-link.h  vy-virtual-net-request.cc  vy-virtual-net-request.h  vy-virtual-node.cc  vy-virtual-node.h  vy-vnr-embedding-proc.cc  vy-vnr-embedding-proc.h  vy-vnr-generator.cc  vy-vnr-generator.h  vy-vnr-proc-digraph.cc  vy-vnr-proc-digraph.h  vy-vnr-proc-observer.cc  vy-vnr-proc-observer.h  vy-vnr-release-proc.cc  vy-vnr-release-proc.h
src/VineYard/files/substrate_network/: sub-20.txt
src/VineYard/files/virtual_net_requests/r-10-50-50-20-10-10-50/: req5.txt  req8.txt
src/VineYard/files/virtual_net_requests/r-2000-50-20-10-10-10-50/: req1.txt  req10.txt  req100.txt  req1003.txt  req1004.txt  req1007.txt  req1009.txt  req101.txt  req1013.txt  req1014.txt  req1017.txt  req1020.txt  req1024.txt  req1026.txt  req1027.txt  req103.txt  req1030.txt  req1033.txt  req1035.txt  req1036.txt  req1038.txt  req1040.txt  req1042.txt  req1043.txt  req1048.txt  req1049.txt  req105.txt  req1050.txt  req1054.txt  req1055.txt  req1056.txt  req1060.txt  req1063.txt  req1064.txt  req1067.txt  req1069.txt  req107.txt  req1073.txt  req1075.txt  req1076.txt  (+905 more)
src/VineYard/files/virtual_net_requests/r-2000-50-50-20-10-10-50/: req1.txt  req100.txt  req1000.txt  req1003.txt  req1011.txt  req1016.txt  req1017.txt  req1019.txt  req1021.txt  req1023.txt  req1024.txt  req1025.txt  req1028.txt  req1029.txt  req1031.txt  req1032.txt  req1033.txt  req1035.txt  req1037.txt  req1041.txt  req1043.txt  req1046.txt  req1047.txt  req1051.txt  req1053.txt  req1054.txt  req106.txt  (+925 more)
src/VineYard/test/: vy-test.cc
src/Vineyard/: CMakeLists.txt  vy-coordinate.cc  vy-coordinate.h  vy-statistics.h  vy-substrate-link.cc  vy-substrate-link.h  vy-substrate-network-builder.cc  vy-substrate-network-builder.h  vy-substrate-node.cc  vy-substrate-node.h  vy-vine-embedding-algo-file-based.cc  vy-vine-embedding-algo-file-based.h  vy-vine-embedding-algo.cc  vy-vine-link-embedding-algo-no-disk-io.cc  vy-vine-link-embedding-algo-no-disk-io.h  vy-vine-link-embedding-algo.cc  vy-vine-link-embedding-algo.h  vy-vine-node-embedding-algo.cc  vy-vine-node-embedding-algo.h  vy-vine-two-stage-embedding-algo.cc  vy-vine-two-stage-embedding-algo.h  vy-virtual-link.cc  vy-virtual-link.h  vy-virtual-net-request.cc  vy-virtual-net-request.h  vy-virtual-node.cc  vy-virtual-node.h  vy-vnr-embedding-proc.cc  vy-vnr-embedding-proc.h  vy-vnr-generator.cc  vy-vnr-generator.h  vy-vnr-proc-digraph.cc  vy-vnr-proc-digraph.h  vy-vnr-proc-observer.cc  vy-vnr-proc-observer.h  vy-vnr-release-proc.cc  vy-vnr-release-proc.h
src/Vineyard/files/lp/: CNLM-LP.mod  CNLM-MIP.mod  MCF.mod
src/Vineyard/files/substrate_network/: sub-25.txt  sub-50-0.txt  sub-50-2.txt
src/Vineyard/test/: CMakeLists.txt  vy-test.cc
src/cli/: CMakeLists.txt  main.cc
src/cmdline/: main.cc
src/core/: CMakeLists.txt  config-manager.cc  config-manager.h  config.h.in  coordinate.h  core-types.h  db-manager.cc  db-manager.h  embedding-algorithm.h  experiment-parameters.cc  experiment-parameters.h  experiment.h  id-generator.cc  id-generator.h  link-embedding-algorithm.h  link.h  network-builder.h  network-file-generator.cc  network-file-generator.h  network-request.h  network.h  node-embedding-algorithm.h  node.h  release-algorithm.h  request-processor.h  request.h  resources.h  rng.cc  rng.h  simple-network.h  statistic-collector.h  statistics-subscriber.h  substrate-link.h  substrate-network.h  substrate-node.h  two-stage-embedding-algo.h  virtual-link.h  virtual-network-request.h  virtual-network.h  virtual-node.h  (+5 more)
src/core/test/: CMakeLists.txt  core-test.cc
src/core/tests/: core-test.cc
src/experiments/: CMakeLists.txt  grc-experiments.cc  grc-experiments.h  mcvne-experiments.cc  mcvne-experiments.h  vineyard-experiments.cc  vineyard-experiments.h
src/experiments/test/: CMakeLists.txt  experiments-test.cc
src/grc/: CMakeLists.txt  grc-node-embedding-algo.cc  grc-node-embedding-algo.h
src/mcts/: CMakeLists.txt  mcts-simulator.cc  mcts-simulator.h  mcts-statistics.h  mcts.cc  mcts.h  state.h  tree-node.cc  tree-node.h
src/mcvne/: CMakeLists.txt  mcvne-bfs-link-embedding-algo.cc  mcvne-bfs-link-embedding-algo.h  mcvne-node-embedding-algo.cc  mcvne-node-embedding-algo.h  mcvne-simulator.cc  mcvne-simulator.h  vne-mcts-simulator.h  vne-nm-state.cc  vne-nm-state.h
src/network-file-generator/: CMakeLists.txt  brite-handler.cc  brite-handler.h  external-lib-handler.h  fnss-handler.h  network-file-generator.cc  network-file-generator.h
src/network-file-generator/test/: CMakeLists.txt  network-file-generator-test.cc
src/simple-impl/: simple-link.cc  simple-link.h  simple-network.cc  simple-network.h  simple-node.cc  simple-node.h  simple-request-proc.cc  simple-request-proc.h  simple-request.cc  simple-request.h
src/simple-impl/test/: simple-link-test.cc  simple-network-test.cc  simple-node-test.cc  simple-request-test.cc
src/test-suite/: boost-test-driver.cc
src/utilities/: CMakeLists.txt  boost-test-driver.cc  logger.cc  logger.h  python_utils.cpp  python_utils.h
(+9236 files in other folders)
