#add_subdirectory(mcvne)

#add_subdirectory(mcts)

#add_subdirectory(experiments)
#add_subdirectory(experiments/test)

add_subdirectory(core)
add_subdirectory(core/test)

add_subdirectory(experiments)
add_subdirectory(experiments/test)

add_subdirectory(mcts)

add_subdirectory(mcvne)

add_subdirectory(Vineyard)
add_subdirectory(Vineyard/test)

add_subdirectory(utilities)



